
  - The configuration process now does respect the values of libdir,
    bindir, infodir,... supplied by the user.

  - SLOT-EXISTS-P now works with all types of objects.

  - LCM now works when any of the arguments is 0.

  - SIGNUM now accepts complex arguments.

  - COMPILE-FILE now handles files with relative pathnames (like
    "foo/faa.lsp").

* Documentation:

  - New manual page documents the scripting facilities of ECL
    (contributed by Julian St.)

* Visible changes:

  - ECL now distinguishes between the current working directory of the
    C library (obtained by SI::GETCWD and changed with SI::CHDIR) and
    the directory for the lisp environment (the value of
    *DEFAULT-PATHNAME-DEFAULTS*). The internal routine SI::CHDIR now
    takes arguments: the new directory, and an optional boolean
    that determines whether *DEFAULT-PATHNAME-DEFAULTS* is also to be
    changed (defaults to true).

  - New command line options -shell and -norc, which are useful for
    scripting. New and more robust handling of command line options,
    permits combining (and repeating) the options -load, -eval, -shell
    in a number of ways.

  - SI:FILE-COLUMN now always returns a number, which may be 0 for
    streams that do not have that information.

  - The compiler (COMPILE-FILE, COMPILE, etc), now understands
    logical pathnames.

  - Under windows, the system directory is defined to be the place
    where ecl.exe resides. Windows user will want to use the
    command "make windows-dist", which builds a ZIP file with a
    ready to be installed ECL.

  - If you want to install ECL to a different place, use "make prefix=..."
    instead of the old form "make PREFIX=...". ECL now follows the GNU
    coding standards in this particular point.

  - The script "ecl-config" now returns only the essential flags to compile a
    file that links against ECL. It does not include optimization flags, or
    flags to create position independent object files.
