@@ -72,9 +72,13 @@ cl_symbols[] = {
 {"*PRINT-GENSYM*", CL_SPECIAL, NULL, -1, Ct},
 {"*PRINT-LENGTH*", CL_SPECIAL, NULL, -1, Cnil},
 {"*PRINT-LEVEL*", CL_SPECIAL, NULL, -1, Cnil},
+{"*PRINT-LINES*", CL_SPECIAL, NULL, -1, Cnil},
+{"*PRINT-MISER-WIDTH*", CL_SPECIAL, NULL, -1, Cnil},
+{"*PRINT-PPRINT-DISPATCH*", CL_SPECIAL, NULL, -1, Cnil},
 {"*PRINT-PRETTY*", CL_SPECIAL, NULL, -1, Ct},
 {"*PRINT-RADIX*", CL_SPECIAL, NULL, -1, Cnil},
 {"*PRINT-READABLY*", CL_SPECIAL, NULL, -1, Cnil},
+{"*PRINT-RIGHT-MARGIN*", CL_SPECIAL, NULL, -1, Cnil},
 {"*QUERY-IO*", CL_SPECIAL, NULL, -1, OBJNULL},
 {"*RANDOM-STATE*", CL_SPECIAL, NULL, -1, OBJNULL},
 {"*READ-BASE*", CL_SPECIAL, NULL, -1, MAKE_FIXNUM(10)},
@@ -274,6 +278,7 @@ cl_symbols[] = {
 {"CONTROL-ERROR", CL_ORDINARY, NULL, -1, OBJNULL},
 {"COPY-ALIST", CL_ORDINARY, cl_copy_alist, 1, OBJNULL},
 {"COPY-LIST", CL_ORDINARY, cl_copy_list, 1, OBJNULL},
+{"COPY-PPRINT-DISPATCH", CL_ORDINARY, NULL, -1, OBJNULL},
 {"COPY-READTABLE", CL_ORDINARY, cl_copy_readtable, -1, OBJNULL},
 {"COPY-SEQ", CL_ORDINARY, cl_copy_seq, 1, OBJNULL},
 {"COPY-STRUCTURE", CL_ORDINARY, cl_copy_structure, 1, OBJNULL},
@@ -663,6 +668,16 @@ cl_symbols[] = {
 {"POSITION-IF", CL_ORDINARY, NULL, -1, OBJNULL},
 {"POSITION-IF-NOT", CL_ORDINARY, NULL, -1, OBJNULL},
 {"PPRINT", CL_ORDINARY, cl_pprint, -1, OBJNULL},
+{"PPRINT-DISPATCH", CL_ORDINARY, NULL, -1, OBJNULL},
+{"PPRINT-EXIT-IF-LIST-EXHAUSTED", CL_ORDINARY, NULL, -1, OBJNULL},
+{"PPRINT-FILL", CL_ORDINARY, NULL, -1, OBJNULL},
+{"PPRINT-INDENT", CL_ORDINARY, NULL, -1, OBJNULL},
+{"PPRINT-LINEAR", CL_ORDINARY, NULL, -1, OBJNULL},
+{"PPRINT-LOGICAL-BLOCK", CL_ORDINARY, NULL, -1, OBJNULL},
+{"PPRINT-NEWLINE", CL_ORDINARY, NULL, -1, OBJNULL},
+{"PPRINT-POP", CL_ORDINARY, NULL, -1, OBJNULL},
+{"PPRINT-TAB", CL_ORDINARY, NULL, -1, OBJNULL},
+{"PPRINT-TABULAR", CL_ORDINARY, NULL, -1, OBJNULL},
 {"PRIN1", CL_ORDINARY, cl_prin1, -1, OBJNULL},
 {"PRIN1-TO-STRING", CL_ORDINARY, NULL, -1, OBJNULL},
 {"PRINC", CL_ORDINARY, cl_princ, -1, OBJNULL},
@@ -753,6 +768,7 @@ cl_symbols[] = {
 {"SET-DISPATCH-MACRO-CHARACTER", CL_ORDINARY, cl_set_dispatch_macro_character, -1, OBJNULL},
 {"SET-EXCLUSIVE-OR", CL_ORDINARY, NULL, -1, OBJNULL},
 {"SET-MACRO-CHARACTER", CL_ORDINARY, cl_set_macro_character, -1, OBJNULL},
+{"SET-PPRINT-DISPATCH", CL_ORDINARY, NULL, -1, OBJNULL},
 {"SET-SYNTAX-FROM-CHAR", CL_ORDINARY, cl_set_syntax_from_char, -1, OBJNULL},
 {"SETF", CL_ORDINARY, NULL, -1, OBJNULL},
 {"SETQ", CL_FORM, NULL, -1, OBJNULL},
@@ -865,8 +881,8 @@ cl_symbols[] = {
 {"THROW", CL_FORM, NULL, -1, OBJNULL},
 {"TIME", CL_ORDINARY, NULL, -1, OBJNULL},
 {"TRACE", CL_ORDINARY, NULL, -1, OBJNULL},
-{"TRANSLATE-LOGICAL-PATHNAME", CL_ORDINARY, cl_translate_logical_pathname, 1, OBJNULL},
-{"TRANSLATE-PATHNAME", CL_ORDINARY, cl_translate_pathname, 3, OBJNULL},
+{"TRANSLATE-LOGICAL-PATHNAME", CL_ORDINARY, cl_translate_logical_pathname, -1, OBJNULL},
+{"TRANSLATE-PATHNAME", CL_ORDINARY, cl_translate_pathname, -1, OBJNULL},
 {"TREE-EQUAL", CL_ORDINARY, cl_tree_equal, -1, OBJNULL},
 {"TRUENAME", CL_ORDINARY, cl_truename, 1, OBJNULL},
 {"TRUNCATE", CL_ORDINARY, cl_truncate, -1, OBJNULL},
@@ -957,6 +973,8 @@ cl_symbols[] = {
 {"INVALID-METHOD-ERROR", CL_ORDINARY, NULL, -1, OBJNULL},
 {"MAKE-INSTANCE", CL_ORDINARY, NULL, -1, OBJNULL},
 {"MAKE-INSTANCES-OBSOLETE", CL_ORDINARY, NULL, -1, OBJNULL},
+{"MAKE-LOAD-FORM", CL_ORDINARY, NULL, -1, OBJNULL},
+{"MAKE-LOAD-FORM-SAVING-SLOTS", CL_ORDINARY, NULL, -1, OBJNULL},
 {"MAKE-METHOD", CL_ORDINARY, NULL, -1, OBJNULL},
 {"METHOD", CL_ORDINARY, NULL, -1, OBJNULL},
 {"METHOD-COMBINATION-ERROR", CL_ORDINARY, NULL, -1, OBJNULL},
