@@ -1002,8 +1002,8 @@ extern cl_object cl_directory_namestring(cl_object pname);
 extern cl_object cl_host_namestring(cl_object pname);
 extern cl_object si_logical_pathname_p(cl_object pname);
 extern cl_object cl_pathname_match_p(cl_object path, cl_object mask);
-extern cl_object cl_translate_pathname(cl_object source, cl_object from, cl_object to);
-extern cl_object cl_translate_logical_pathname(cl_object source);
+extern cl_object cl_translate_pathname _ARGS((int narg, cl_object source, cl_object from, cl_object to, ...));
+extern cl_object cl_translate_logical_pathname _ARGS((int narg, cl_object source, ...));
 extern cl_object cl_parse_namestring _ARGS((int narg, cl_object thing, ...));
 extern cl_object cl_parse_logical_namestring _ARGS((int narg, cl_object thing, ...));
 extern cl_object cl_merge_pathnames _ARGS((int narg, cl_object path, ...));
@@ -1387,7 +1387,6 @@ extern void assert_type_symbol(cl_object p);
 extern void assert_type_package(cl_object p);
 extern void assert_type_string(cl_object p);
 extern void assert_type_cons(cl_object p);
-extern void assert_type_stream(cl_object p);
 extern void assert_type_readtable(cl_object p);
 extern void assert_type_hash_table(cl_object p);
 extern void assert_type_array(cl_object p);
